# beamer2pptx

./: .gitignore  LICENSE.rst  MANIFEST.in  README.rst  noxfile.py  setup.cfg
doc/: changelog.rst  conf.py
docs/: .buildinfo  api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  changelog.doctree  environment.pickle  index.doctree
docs/_sources/: api.rst.txt  changelog.rst.txt  index.rst.txt
src/beamer2pptx/: __init__.py  _main.py  template.pptx
tests/: conftest.py  test_convert.py  test_extracts.py
