[metadata]
name = beamer2pptx
version = 0.0.1
author = Keith F. Prussing
author_email = kprussing74@gmail.com
description = Convert beamer presentation to PowerPoint
long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = LICENSE.rst
url = https://kprussing.github.io/beamer2pptx/
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Education
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Utilities`
keywords =
    beamer
    PowerPoint
    presentation

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.6, <4
install_requires =
    lxml
    lxml-stubs>=0.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    beamer2pptx = _main:_main

[build_sphinx]
project = Pandoc Acronym Filter

[mypy]
[mypy-nox]
ignore_missing_imports = True
